Fixing alignwide bug when scrollbars always shown, closes #34

--- a/web/wp-content/themes/lf-theme/source/scss/core/_global.scss
+++ b/web/wp-content/themes/lf-theme/source/scss/core/_global.scss
@@ -22,6 +22,11 @@ body {
     overscroll-behavior: none;
 }
 
+// applied on pages, need this because of .alignwide blocks.
+.page-content {
+    overflow-x: hidden;
+}
+
 .container {
     width: 100%;
     max-width: 1050px;
